--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2334,6 +2334,37 @@ span,
   background-color: #d6e0ff;
   border: 1px solid #b3b8e0;
 }
+/*------------------------------*/
+/*------------------------------*/
+.successLine.dash2 #twentyFive {
+  background-color: var(--3366FF);
+}
+.successLine.dash2::after {
+  width: 35%;
+}
+.successLine.dash3 #twentyFive {
+  background-color: var(--3366FF);
+}
+.successLine.dash3 #fifty {
+  background-color: var(--3366FF);
+}
+.successLine.dash3::after {
+  width: 65%;
+}
+.successLine.dash4 #twentyFive {
+  background-color: var(--3366FF);
+}
+.successLine.dash4 #fifty {
+  background-color: var(--3366FF);
+}
+.successLine.dash4 #seventyFive {
+  background-color: var(--3366FF);
+}
+.successLine.dash4::after {
+  width: 100%;
+}
+/*------------------------------*/
+/*------------------------------*/
 .accVerifyInner .verifyStep {
   padding: 25px 60px 25px 20px;
   background-color: var(--white);
@@ -2394,7 +2425,6 @@ span,
 }
 .secondStep .secondBottom > p {
   font-family: "Euclid Regular";
-
 }
 .secondStep .uploadVideo {
   width: 100%;
@@ -2432,7 +2462,10 @@ span,
 .verifyStep .stepButtons .myBtn.prevBtn {
   background-color: #5c85ff;
 }
-
+.stepButtons a{ 
+  width: max-content !important;
+  padding: 14px 50px !important;
+}
 .verifyStep.thirdStep {
   padding: 30px !important;
   padding-right: 30px !important;
@@ -2441,6 +2474,9 @@ span,
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+.thirdTop > p {
+  font-family: "Euclid Medium";
 }
 .thirdStep input[type="file"] {
   display: none;
@@ -2488,7 +2524,7 @@ span,
   outline: 0;
   margin-bottom: 19px;
 }
-#numInputLabel>p{
+#numInputLabel > p {
   margin-top: 19px !important;
 }
 .thirdBottom .numberInput {
